<resources>
    <string name="app_name">Yulu-Explore Nearby</string>
    <string name="action_settings">Settings</string>
    <string name="loc_req_heading">Location permission missing</string>
    <string name="loc_req_message">Please enable location permission for best experience.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="loading_location_text">Finding your location. Please wait..</string>
    <string name="loading_nearby_places">Loading nearby places. Please wait..</string>
    <string name="retry_text">Retry</string>
    <string name="explore_places">Places Nearby</string>
    <string name="location_turned_off">Location is turned off.</string>
    <string name="enable_loc_for_best_experience">Enable location for the best experience and pull the list to refresh.</string>
    <string name="cancel">Cancel</string>
    <string name="add_permission">Add permission</string>
    <string name="search">Search</string>
    <string name="search_suggestion">Search like restaurant,tacos,shopping mall</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="top_picks">Top Picks</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="coffee">Coffee</string>
    <string name="shops">Shops</string>
    <string name="outdoors">Outdoors</string>
    <string name="arts">Arts</string>
    <string name="sights">Sights</string>
    <string name="trending">Trending</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_place_text">No Places found.</string>
    <string name="no_internet_connection">No internet connection.</string>
</resources>
