<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_box_bg"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/search_suggestion"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_8"
            android:paddingRight="@dimen/padding_8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_bg"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/search"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36"
        android:layout_marginBottom="@dimen/fab_margin"
        android:gravity="center_horizontal"
        android:text="@string/explore_categories"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/food"
                android:textAllCaps="true" />

            <View
                android:layout_width="@dimen/fab_margin"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/drinks"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/coffee" />

            <View
                android:layout_width="@dimen/fab_margin"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/shops" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/arts" />

            <View
                android:layout_width="@dimen/fab_margin"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/outdoors" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/sights" />

            <View
                android:layout_width="@dimen/fab_margin"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_box_bg"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/trending" />
        </TableRow>
    </TableLayout>
</LinearLayout>