<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:clipChildren="false"
    android:elevation="@dimen/padding_8"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin"
        android:text="Top picks( Showing 30 results)"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/top_picks_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/top_picks"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/trending_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/trending"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/food_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/food"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/shops_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/shops"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/arts_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/arts"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/drinks_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/drinks"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/coffee_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/coffee"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/outdoors_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/outdoors"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sights_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:background="@drawable/rounded_white_corner_box_bg"
                android:padding="@dimen/padding_8"
                android:text="@string/sights"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>